fix: handle html, body overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,9 @@
 *{
     box-sizing: border-box;
 }
+html, body {
+  overflow-x: hidden;
+}
 body {
     margin: 0;
     color:#172025;
